--- a/webD/quiz5.html
+++ b/webD/quiz5.html
@@ -17,11 +17,12 @@
             padding: 10px;
             height: 7vh;
             text-align: center;
+            border: 2px solid rgb(231, 42, 137);
         }
         .container{
             background-color: rgb(6, 110, 6);
             /* padding: 10px; */
-            margin: 20px 10px 10px 0px;
+            margin: 20px 10px 10px 10px;
             height: 80vh;
             display: flex;
         }
